Moved /users/quantity to /users/metrics and added the route to swagger
